# protobase

./: README.md  pyproject.toml  scripts.py
.github/workflows/: release.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: modules.rst  protobase.rst  protobase.traits.rst
src/protobase/: __init__.py  attr.py  core.py  criteria.py  objtools.py  unification.py  utils.py
src/protobase/traits/: __init__.py  cmp.py  consed.py  hash.py  init.py  inmutable.py  repr.py  zip.py
src/protobase/visit/: transform.py  unify.py
tests/: _test_visitors.py  algebra.lark  algebra.py  test_algebra.py  test_builtins.py  test_compatibility.py  test_internals.py  test_pickle.py  test_protobase.py
